--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ for(let i=0;i<40;i++){
 
 // IMAGES
 const images=[
- "star.jpeg","star-1.jpeg","stardance.jpeg",
+ "27-Star.jpeg","star-1.jpeg","stardance.jpeg",
  "stardance-1.jpeg","stardance-2.jpeg","stardance-3.jpeg"
 ];
 
