--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ for(let i=0;i<40;i++){
 
 // IMAGES
 const images=[
- "images/27-Star.jpeg","star-1.jpeg","stardance.jpeg",
- "stardance-1.jpeg","stardance-2.jpeg","stardance-3.jpeg"
+ "images/27-Star.jpeg","images/27-Star-1.jpeg","images/27-Star-2.jpeg",
+ "images/27-Star-3.jpeg","images/27-Star-4.jpeg","images/27-Star-5.jpeg"
 ];
 
 let imgA=document.getElementById("a"),
