--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html lang="en"> 
+<html lang="en">  
 <head>
 <meta charset="UTF-8">
 <title>Dream TV — Lucid Whispers</title>
@@ -191,7 +191,7 @@ for(let i=0;i<40;i++){
 // IMAGES
 const images=[
  "images/27-Star.jpeg","images/27-Star-1.jpeg","images/27-Star-2.jpeg",
- "images/27-Star-3.jpeg","images/27-Star-4.jpeg","images/27-Star-5.jpeg"
+ "images/27-Star-3.jpeg","images/27-Star-4.jpeg","images/27-Star-5.jpeg","images/27-Star-6.jpeg"
 ];
 
 let imgA=document.getElementById("a"),
