--- a/surrealality/index.html
+++ b/surrealality/index.html
@@ -150,9 +150,8 @@ for(let i=0;i<130;i++){
 
 /* SLIDES */
 let imgs=[
-"star.jpeg","star-1.jpeg",
-"stardance.jpeg","stardance-1.jpeg",
-"stardance-2.jpeg","stardance-3.jpeg"
+ "images/27-Star.jpeg","images/27-Star-1.jpeg","images/27-Star-2.jpeg",
+ "images/27-Star-3.jpeg","images/27-Star-4.jpeg","images/27-Star-5.jpeg","images/27-Star-6.jpeg"
 ];
 let i=0,a=document.getElementById("a"),b=document.getElementById("b"),on=true;
 a.src=imgs[0];a.style.opacity=1;
