--- a/soundtrack-december2025/index.html
+++ b/soundtrack-december2025/index.html
@@ -46,7 +46,7 @@ button:hover{background:rgba(170,230,255,.5)}
 const player = document.getElementById("player");
 
 const realms = [
- {name:"Cafe", img:"cafe.png", song:"Yeshua.mp3", desc:"A café drifting between starlight and comfort."},
+ {name:"Cafe", img:"images/1.jpg", song:"Yeshua.mp3", desc:"A café drifting between starlight and comfort."},
  {name:"TeaGarden", img:"teagarden.png", song:"teagarden.mp3", desc:"Ancient tea leaves glow beneath cosmic moonlight."},
  {name:"Zen Feelings", img:"zen.png", song:"zen.mp3", desc:"Emotion floats here like mist in the morning."},
  {name:"The Way", img:"way.png", song:"way.mp3", desc:"A path that moves when you do not watch."},
