--- a/soundtrack-december2025/index.html
+++ b/soundtrack-december2025/index.html
@@ -47,10 +47,10 @@ const player = document.getElementById("player");
 
 const realms = [
  {name:"Cafe", img:"images/1.jpg", song:"Yeshua.mp3", desc:"A café drifting between starlight and comfort."},
- {name:"TeaGarden", img:"teagarden.png", song:"teagarden.mp3", desc:"Ancient tea leaves glow beneath cosmic moonlight."},
+ {name:"TeaGarden", img:"teagarden.png", song:"1.mp3", desc:"Ancient tea leaves glow beneath cosmic moonlight."},
  {name:"Zen Feelings", img:"zen.png", song:"zen.mp3", desc:"Emotion floats here like mist in the morning."},
  {name:"The Way", img:"way.png", song:"way.mp3", desc:"A path that moves when you do not watch."},
- {name:"Miki Music", img:"miki.png", song:"miki.mp3", desc:"Where sound becomes shape and color."},
+ {name:"Miki Music", img:"miki.png", song:"mikissurrender.mp3", desc:"Where sound becomes shape and color."},
  {name:"Hans Lair", img:"hans.png", song:"hans.mp3", desc:"Tools, dreams, and hidden doors live here."},
  {name:"Charis Rat Room", img:"charis.png", song:"charis.mp3", desc:"Tiny paws wander giant ideas."}
 ];
