--- a/soundtrack-december2025/index.html
+++ b/soundtrack-december2025/index.html
@@ -48,7 +48,7 @@ const player = document.getElementById("player");
 const realms = [
  {name:"Cafe", img:"images/27-1.jpeg", song:"Yeshua.mp3", desc:"A café drifting between starlight and comfort."},
  {name:"TeaGarden", img:"images/27-1.jpeg", song:"1.mp3", desc:"Ancient tea leaves glow beneath cosmic moonlight."},
- {name:"Zen Feelings", img:"images/27-2.jpeg", song:"zen.mp3", desc:"Emotion floats here like mist in the morning."},
+ {name:"Zen Feelings", img:"images/27-2.jpeg", song:"Yeshua-ext.2.mp3", desc:"Emotion floats here like mist in the morning."},
  {name:"The Way", img:"images/27-3.jpeg", song:"way.mp3", desc:"A path that moves when you do not watch."},
  {name:"Miki Music", img:"images/27-4.jpeg", song:"mikissurrender.mp3", desc:"Where sound becomes shape and color."},
  {name:"Hans Lair", img:"images/27-5.jpeg", song:"hans.mp3", desc:"Tools, dreams, and hidden doors live here."},
