--- a/soundtrack-december2025/index.html
+++ b/soundtrack-december2025/index.html
@@ -47,7 +47,7 @@ const player = document.getElementById("player");
 
 const realms = [
  {name:"Cafe", img:"27-Star-2.jpeg", song:"Yeshua.mp3", desc:"A café drifting between starlight and comfort."},
- {name:"TeaGarden", img:"images/27-1.jpeg", song:"1.mp3", desc:"Ancient tea leaves glow beneath cosmic moonlight."},
+ {name:"TeaGarden", img:"images/27-1.jpeg", song:"WhoamI.mp3", desc:"Ancient tea leaves glow beneath cosmic moonlight."},
  {name:"Zen Feelings", img:"images/27-2.jpeg", song:"Yeshua-ext.2.mp3", desc:"Emotion floats here like mist in the morning."},
  {name:"The Way", img:"images/27-3.jpeg", song:"way.mp3", desc:"A path that moves when you do not watch."},
  {name:"Miki Music", img:"images/27-4.jpeg", song:"mikissurrender.mp3", desc:"Where sound becomes shape and color."},
