--- a/Dream-Player/index.html
+++ b/Dream-Player/index.html
@@ -94,7 +94,7 @@ const data = new Uint8Array(analyser.frequencyBinCount);
 
 // LOGO
 const logo = new Image();
-logo.src = "logo.png";
+logo.src = "stardance6b.jpeg";
 
 // STARS
 const stars = [];
