--- a/Dream-Player/dream-visualizer-with-playlist.html
+++ b/Dream-Player/dream-visualizer-with-playlist.html
@@ -117,7 +117,7 @@ let t=0,a=0;
 
 /* LOGO */
 const logo=new Image();
-logo.src="logo.png";
+logo.src="stardance6b.jpeg";
 
 /* LOAD SONGS */
 document.getElementById("load").onclick=()=>{
