--- a/Dream-Player-List/index.html
+++ b/Dream-Player-List/index.html
@@ -109,7 +109,7 @@ let ready=false, current=0, t=0,a=0;
 
 /* AUTO PLAYLIST */
 const playlist = [
-  "yeshua-ext.2.mp3"
+  "Dream-Player/Yeshua-ext.2.mp3"
 ];
 
 audio.src = playlist[0];
