--- a/Dream-Player-List/index.html
+++ b/Dream-Player-List/index.html
@@ -163,7 +163,7 @@ function drawPlaylist(){
 
 /* LOGO */
 const logo=new Image();
-logo.src="logo.png";
+logo.src="images/avatar1.jpeg";
 
 /* DRAW */
 function draw(){
