--- a/Dream-Player-List/audio-winter-player.html
+++ b/Dream-Player-List/audio-winter-player.html
@@ -77,13 +77,13 @@ const bar=document.getElementById("bar");
 const status=document.getElementById("status");
 const songsUI=document.getElementById("songs");
 
-const playlist=["yeshua-ext.2.mp3"];
+const playlist=["Dream-Player/Yeshua-ext.2.mp3"];
 let current=0, audioCtx, analyser, dataArray, src, ready=false;
 let t=0;
 
 /* LOGO */
 const logo=new Image();
-logo.src="logo.png";
+logo.src="avatar.1";
 
 /* SNOW PARTICLES */
 const snow=[];
