--- a/Snow-Globe-Visualizer/index.html
+++ b/Snow-Globe-Visualizer/index.html
@@ -49,7 +49,7 @@ const songsUI=document.getElementById("songs");
 
 /* ✅ PLAYLIST (EDIT FILE NAMES HERE) */
 const playlist=[
- "song1.mp3",
+ "soundtrack-december2025/WhoamI.mp3",
  "song2.mp3",
  "song3.mp3",
  "song4.mp3",
