--- a/Snow-Globe-Visualizer/index.html
+++ b/Snow-Globe-Visualizer/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Snowglobe Playlist Player</title>
+<title>Snowglobe Player (Fixed Click-Play)</title>
 <style>
 html,body{margin:0;overflow:hidden;background:radial-gradient(circle,#020c18,#000);font-family:system-ui}
 canvas{display:block}
 #ui{position:fixed;bottom:12px;left:50%;transform:translateX(-50%);display:flex;gap:10px;background:rgba(5,20,35,.8);padding:8px 14px;border-radius:16px}
-button{background:#0e3c5d;color:#cff;border:none;padding:6px 12px;border-radius:8px;cursor:pointer}
+button{background:#0e3c5d;color:#cff;border:none;padding:6px 12px;border-radius:8px}
 #progress{width:140px;height:6px;background:#041522;border-radius:999px;overflow:hidden}
 #bar{height:100%;width:0;background:#79ddff}
 #status{font-size:12px;opacity:.75}
 #playlist{position:fixed;right:0;top:50%;transform:translateY(-50%);width:210px;padding:10px;background:rgba(4,18,28,.8);color:#9be7ff;border-radius:12px 0 0 12px}
-#playlist h3{margin:0 0 6px;font-size:15px}
 #songs{list-style:none;margin:0;padding:0}
 #songs li{padding:5px;border-radius:6px;cursor:pointer}
 #songs li:hover{background:rgba(120,220,255,.15)}
@@ -26,7 +25,7 @@ button{background:#0e3c5d;color:#cff;border:none;padding:6px 12px;border-radius:
 <div id="ui">
 <button id="playpause">Play</button>
 <div id="progress"><div id="bar"></div></div>
-<span id="status">Waiting…</span>
+<span id="status">Click any song</span>
 </div>
 
 <div id="playlist">
@@ -34,7 +33,7 @@ button{background:#0e3c5d;color:#cff;border:none;padding:6px 12px;border-radius:
 <ul id="songs"></ul>
 </div>
 
-<audio id="audio" crossorigin="anonymous"></audio>
+<audio id="audio" crossorigin></audio>
 
 <script>
 const c=document.getElementById("c"),ctx=c.getContext("2d");
@@ -47,20 +46,10 @@ const bar=document.getElementById("bar");
 const status=document.getElementById("status");
 const songsUI=document.getElementById("songs");
 
-/* ✅ PLAYLIST (EDIT FILE NAMES HERE) */
-const playlist=[
- "soundtrack-december2025/WhoamI.mp3",
- "song2.mp3",
- "song3.mp3",
- "song4.mp3",
- "song5.mp3",
- "song6.mp3",
- "song7.mp3"
-];
+const playlist=["song1.mp3","song2.mp3","song3.mp3","song4.mp3","song5.mp3","song6.mp3","song7.mp3"];
 let current=0;
 
-/* AUDIO CONTEXT */
-let audioCtx, analyser, dataArray, src, ready=false;
+let audioCtx, analyser, dataArray, source, ready=false;
 
 /* LOGO */
 const logo=new Image();
@@ -68,9 +57,54 @@ logo.src="logo.png";
 
 /* SNOW */
 const snow=[];
-for(let i=0;i<170;i++)
- snow.push({a:Math.random()*Math.PI*2,r:Math.random()*140,y:Math.random()*140,s:.4+Math.random()});
+for(let i=0;i<200;i++)
+ snow.push({a:Math.random()*Math.PI*2,r:Math.random()*140,y:Math.random()*140,s:.5+Math.random()});
 
+/* AUDIO INIT */
+function initAudio(){
+ if(ready)return;
+ audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+ analyser=audioCtx.createAnalyser();
+ analyser.fftSize=256;
+ dataArray=new Uint8Array(analyser.frequencyBinCount);
+ source=audioCtx.createMediaElementSource(audio);
+ source.connect(analyser);
+ analyser.connect(audioCtx.destination);
+ ready=true;
+}
+
+/* PLAY SONG */
+function playSong(i){
+ initAudio();
+ current=i;
+ audio.src=playlist[i];
+ audio.load();
+ audioCtx.resume();
+ audio.play().catch(()=>{});
+ status.textContent=playlist[i];
+ playpause.textContent="Pause";
+ drawPlaylist();
+}
+
+/* CLICK PLAY */
+playpause.onclick=()=>{
+ if(!ready){playSong(current);}
+ else if(audio.paused){audioCtx.resume();audio.play();playpause.textContent="Pause";}
+ else{audio.pause();playpause.textContent="Play";}
+};
+
+/* AUTO NEXT */
+audio.onended=()=>{
+ if(current<playlist.length-1) playSong(current+1);
+};
+
+/* PROGRESS */
+audio.ontimeupdate=()=>{
+ if(audio.duration)
+  bar.style.width=(audio.currentTime/audio.duration*100)+"%";
+};
+
+/* PLAYLIST UI */
 function drawPlaylist(){
  songsUI.innerHTML="";
  playlist.forEach((song,i)=>{
@@ -81,49 +115,6 @@ function drawPlaylist(){
   songsUI.appendChild(li);
  });
 }
-
-/* INIT AUDIO */
-function initAudio(){
- if(ready) return;
- audioCtx=new (window.AudioContext||window.webkitAudioContext)();
- analyser=audioCtx.createAnalyser();
- analyser.fftSize=256;
- dataArray=new Uint8Array(analyser.frequencyBinCount);
- src=audioCtx.createMediaElementSource(audio);
- src.connect(analyser);
- analyser.connect(audioCtx.destination);
- ready=true;
-}
-
-/* PLAY SONG */
-function playSong(i){
- current=i;
- initAudio();
- audio.src=playlist[i];
- audio.play();
- status.textContent=playlist[i];
- playpause.textContent="Pause";
- drawPlaylist();
-}
-
-/* NEXT SONG */
-audio.onended=()=>{
- if(current<playlist.length-1) playSong(current+1);
-};
-
-/* PLAY PAUSE */
-playpause.onclick=()=>{
- if(!ready) playSong(current);
- else if(audio.paused){audio.play();playpause.textContent="Pause";}
- else{audio.pause();playpause.textContent="Play";}
-};
-
-/* PROGRESS */
-audio.ontimeupdate=()=>{
- if(audio.duration)
-  bar.style.width=(audio.currentTime/audio.duration*100)+"%";
-};
-
 drawPlaylist();
 
 /* DRAW */
@@ -139,33 +130,29 @@ function draw(){
   let total=0;
   for(let i=0;i<dataArray.length;i++){
     total+=dataArray[i];
-    if(i<10) bass+=dataArray[i];
+    if(i<12) bass+=dataArray[i];
   }
   energy=total/dataArray.length;
-  bass=bass/10;
+  bass=bass/12;
  }
 
- /* CLIP CIRCLE */
+ /* SNOWGLOBE */
  ctx.save();
- ctx.beginPath();
- ctx.arc(cx,cy,150,0,Math.PI*2);ctx.clip();
-
- /* SNOW */
+ ctx.beginPath();ctx.arc(cx,cy,150,0,Math.PI*2);ctx.clip();
  snow.forEach(p=>{
-  p.y+=p.s+energy*.01;
+  p.y+=p.s+energy*.015;
   if(p.y>150)p.y=-150;
   const x=cx+Math.cos(p.a)*p.r;
   const y=cy+p.y;
-  ctx.fillStyle="rgba(255,255,255,.7)";
-  ctx.beginPath();
-  ctx.arc(x,y,1.5,0,Math.PI*2);ctx.fill();
+  ctx.fillStyle="rgba(255,255,255,.75)";
+  ctx.beginPath();ctx.arc(x,y,1.5,0,Math.PI*2);ctx.fill();
  });
 
- /* AURA */
- const glow=ctx.createRadialGradient(cx,cy,30,cx,cy,160);
- glow.addColorStop(0,`rgba(120,220,255,${.22+energy/255})`);
- glow.addColorStop(1,"rgba(0,0,0,0)");
- ctx.fillStyle=glow;
+ /* GLOW */
+ const g=ctx.createRadialGradient(cx,cy,40,cx,cy,160);
+ g.addColorStop(0,`rgba(140,220,255,${.15+energy/200})`);
+ g.addColorStop(1,"rgba(0,0,0,0)");
+ ctx.fillStyle=g;
  ctx.beginPath();
  ctx.arc(cx,cy,160,0,Math.PI*2);ctx.fill();
 
@@ -176,7 +163,6 @@ function draw(){
   ctx.drawImage(logo,cx-size/2,cy-size/2,size,size);
   ctx.globalCompositeOperation="source-over";
  }
-
  ctx.restore();
 
  requestAnimationFrame(draw);
@@ -186,3 +172,4 @@ draw();
 
 </body>
 </html>
+
