--- a/Snow-Globe-Visualizer/index.html
+++ b/Snow-Globe-Visualizer/index.html
@@ -46,7 +46,7 @@ const bar=document.getElementById("bar");
 const status=document.getElementById("status");
 const songsUI=document.getElementById("songs");
 
-const playlist=["soundtrack-december2025/WhoamI.mp3","song2.mp3","song3.mp3","song4.mp3","song5.mp3","song6.mp3","song7.mp3"];
+const playlist=["chimera-greetings.mp3","song2.mp3","song3.mp3","song4.mp3","song5.mp3","song6.mp3","song7.mp3"];
 let current=0;
 
 let audioCtx, analyser, dataArray, source, ready=false;
