--- a/Snow-Globe-Visualizer/snow-playlist.html
+++ b/Snow-Globe-Visualizer/snow-playlist.html
@@ -55,7 +55,7 @@ let audioCtx, analyser, dataArray, source, ready = false;
 
 /* Logo */
 const logo = new Image();
-logo.src = "logo.png";
+logo.src = "images/starchimeraelevatorbutton.jpeg";
 
 /* Snow, Stars, Mist */
 const snow = [], stars = [], mist = [];
