--- a/Snow-Globe-Visualizer/revised-77.html
+++ b/Snow-Globe-Visualizer/revised-77.html
@@ -47,7 +47,7 @@ const status = document.getElementById("status");
 const songsUI = document.getElementById("songs");
 
 /* Playlist */
-const playlist = ["song1.mp3","song2.mp3","song3.mp3","song4.mp3","song5.mp3","song6.mp3","song7.mp3"];
+const playlist = ["chimera-greetings.mp3","song2.mp3","song3.mp3","song4.mp3","song5.mp3","song6.mp3","song7.mp3"];
 let current = 0;
 
 /* Audio */
