--- a/Dream-Player/dream-portal-player.html
+++ b/Dream-Player/dream-portal-player.html
@@ -81,10 +81,10 @@ let t=0;
 // PRE-LOADED PLAYLIST
 const playlist = [
   {name:"surrender.mp3", src:"surrender.mp3"},
-  {name:"yeshua.mp3", src:"yeshua.mp3"},
-  {name:"stars-story.mp3", src:"stars-story.mp3"},
-  {name:"chimeracafe.mp3", src:"chimeracafe.mp3"},
-  {name:"Miki-neko.mp3", src:"Miki-neko.mp3"}
+  {name:"yeshua.mp3", src:"Yeshua-ext.2.mp3"},
+  {name:"stars-story.mp3", src:"Mikiescape.mp3"},
+  {name:"chimeracafe.mp3", src:"chimera-greetings.mp3"},
+  {name:"Miki-neko.mp3", src:"MikiStory2.mp3"}
 ];
 let currentIndex = 0; 
 const songListEl = document.getElementById("songList");
@@ -93,7 +93,7 @@ const loadBtn = document.getElementById("load");
 
 // LOGO
 const logo = new Image();
-logo.src="logo.png";
+logo.src="Star-Button1.jpeg";
 
 // STARS
 const stars=[];
